Fix rsync without remote port specified

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,7 +109,7 @@ mark_as_advanced(TEST_SUITE_REMOTE_CLIENT)
 if(TEST_SUITE_REMOTE_HOST)
   add_custom_target(rsync
     COMMAND ${PROJECT_SOURCE_DIR}/utils/rsync.sh
-                ${TEST_SUITE_REMOTE_HOST} ${TEST_SUITE_REMOTE_PORT} ${PROJECT_BINARY_DIR} ${TEST_SUITE_REMOTE_PATH}
+                ${TEST_SUITE_REMOTE_HOST} \"${TEST_SUITE_REMOTE_PORT}\" ${PROJECT_BINARY_DIR} ${TEST_SUITE_REMOTE_PATH}
     USES_TERMINAL
   )
 endif()
